--- a/adhocracy-plus/assets/scss/components/_hero-unit.scss
+++ b/adhocracy-plus/assets/scss/components/_hero-unit.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 3.5*$spacer;
+    margin: 0 -1*$spacer 3.5*$spacer -1*$spacer;
 
     position: relative;
 
@@ -15,6 +15,7 @@
 
     @media screen and (min-width: $breakpoint) {
         min-height: $hero-height;
+        margin: 0 0 3.5*$spacer 0;
     }
 
     &:before {
